--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,9 +30,9 @@ jobs:
       - run: yarn build
 
       # 发布到 GitHub Pages
-      - name: Deploy
+      - name: Deploy mybells.github.io/master
         uses: peaceiris/actions-gh-pages@v2
         env:
           PERSONAL_TOKEN: ${{ secrets.ACCESS_TOKEN }} # 访问秘钥
-          PUBLISH_BRANCH: gh-pages # 推送分支
+          PUBLISH_BRANCH: master # 推送分支
           PUBLISH_DIR: ./dist # 部署目录
