--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
       - run: yarn build
 
       # 发布到 GitHub Pages
-      - name: Deploy mybells.github.io/master
+      - name: Deploy
         uses: peaceiris/actions-gh-pages@v2
         env:
           PERSONAL_TOKEN: ${{ secrets.ACCESS_TOKEN }} # 访问秘钥
