--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,8 +31,8 @@ jobs:
 
       # 发布到 GitHub Pages
       - name: Deploy
-        uses: peaceiris/actions-gh-pages@v2
+        uses: peaceiris/actions-gh-pages@v3
         env:
           PERSONAL_TOKEN: ${{ secrets.ACCESS_TOKEN }} # 访问秘钥
-          PUBLISH_BRANCH: master # 推送分支
+          PUBLISH_BRANCH: gh-pages # 推送分支
           PUBLISH_DIR: ./dist # 部署目录
